Lenguajes/EntregaTMP1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMA

Grammar

Rule 0     S' -> S
Rule 1     S -> main
Rule 2     main -> PC MAIN LPAREN RPAREN PC1 vars MODULO main1 PC2
Rule 3     PC -> <empty>
Rule 4     PC1 -> <empty>
Rule 5     PC2 -> <empty>
Rule 6     main1 -> BLOQUE
Rule 7     main1 -> BLOQUE main1
Rule 8     vars -> dec1 vars0 vars
Rule 9     vars -> <empty>
Rule 10    dec1 -> TIPO COLON
Rule 11    dec1 -> <empty>
Rule 12    TIPO -> INT
Rule 13    TIPO -> FL
Rule 14    TIPO -> BOOL
Rule 15    vars0 -> ID EQUAL F SEMICOLON
Rule 16    vars0 -> READ EQUAL ID
Rule 17    vars0 -> PRINT ID
Rule 18    vars0 -> <empty>
Rule 19    MODULO -> FUNCTION ID MOD1 LPAREN RPAREN vars BLOQUE END MODULO MOD2
Rule 20    MODULO -> <empty>
Rule 21    MOD1 -> <empty>
Rule 22    MOD2 -> <empty>
Rule 23    BLOQUE -> BEGIN ESTATUTO BR END
Rule 24    BLOQUE -> <empty>
Rule 25    BR -> SEMICOLON ESTATUTO BR
Rule 26    BR -> <empty>
Rule 27    ESTATUTO -> vars
Rule 28    ESTATUTO -> IF L THEN THEN1 ESTATUTO IF1 FINIF
Rule 29    ESTATUTO -> WHILE WHILE1 L WHILE2 ESTATUTO WHILE3 END
Rule 30    ESTATUTO -> DWHILE ESTATUTO DW1 UNTIL ESTATUTO END
Rule 31    ESTATUTO -> FOR LPAREN vars PIPE L PIPE vars RPAREN ESTATUTO END
Rule 32    ESTATUTO -> BLOQUE
Rule 33    ESTATUTO -> LCOR ID RCOR
Rule 34    ESTATUTO -> <empty>
Rule 35    THEN1 -> <empty>
Rule 36    IF1 -> ELSE ELSE1 ESTATUTO
Rule 37    IF1 -> <empty>
Rule 38    ELSE1 -> <empty>
Rule 39    FINIF -> <empty>
Rule 40    WHILE1 -> <empty>
Rule 41    WHILE2 -> <empty>
Rule 42    WHILE3 -> <empty>
Rule 43    DW1 -> SEMICOLON ESTATUTO DW1
Rule 44    DW1 -> <empty>
Rule 45    IDCTE -> ID
Rule 46    IDCTE -> CTE_INT
Rule 47    IDCTE -> CTE_FL
Rule 48    F -> IDCTE
Rule 49    F -> LPAREN E RPAREN
Rule 50    E -> T
Rule 51    E -> E PLUS T
Rule 52    E -> E MINUS T
Rule 53    T -> F
Rule 54    T -> T TIMES F
Rule 55    T -> T DIVIDE F
Rule 56    OPRL -> GT
Rule 57    OPRL -> LT
Rule 58    OPRL -> ET
Rule 59    L -> ID OPRL ID
Rule 60    L -> LPAREN D RPAREN
Rule 61    D -> L
Rule 62    D -> L D1
Rule 63    D1 -> OR L
Rule 64    D1 -> AND L
Rule 65    D1 -> <empty>

Terminals, with rules where they appear

AND                  : 64
BEGIN                : 23
BOOL                 : 14
COLON                : 10
COMA                 : 
CTE_FL               : 47
CTE_INT              : 46
DIVIDE               : 55
DWHILE               : 30
ELSE                 : 36
END                  : 19 23 29 30 31
EQUAL                : 15 16
ET                   : 58
FL                   : 13
FOR                  : 31
FUNCTION             : 19
GT                   : 56
ID                   : 15 16 17 19 33 45 59 59
IF                   : 28
INT                  : 12
LCOR                 : 33
LPAREN               : 2 19 31 49 60
LT                   : 57
MAIN                 : 2
MINUS                : 52
OR                   : 63
PIPE                 : 31 31
PLUS                 : 51
PRINT                : 17
RCOR                 : 33
READ                 : 16
RPAREN               : 2 19 31 49 60
SEMICOLON            : 15 25 43
THEN                 : 28
TIMES                : 54
UNTIL                : 30
WHILE                : 29
error                : 

Nonterminals, with rules where they appear

BLOQUE               : 6 7 19 32
BR                   : 23 25
D                    : 60
D1                   : 62
DW1                  : 30 43
E                    : 49 51 52
ELSE1                : 36
ESTATUTO             : 23 25 28 29 30 30 31 36 43
F                    : 15 53 54 55
FINIF                : 28
IDCTE                : 48
IF1                  : 28
L                    : 28 29 31 61 62 63 64
MOD1                 : 19
MOD2                 : 19
MODULO               : 2 19
OPRL                 : 59
PC                   : 2
PC1                  : 2
PC2                  : 2
S                    : 0
T                    : 50 51 52 54 55
THEN1                : 28
TIPO                 : 10
WHILE1               : 29
WHILE2               : 29
WHILE3               : 29
dec1                 : 8
main                 : 1
main1                : 2 7
vars                 : 2 8 19 27 31 31
vars0                : 8

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . main
    (2) main -> . PC MAIN LPAREN RPAREN PC1 vars MODULO main1 PC2
    (3) PC -> .

    MAIN            reduce using rule 3 (PC -> .)

    S                              shift and go to state 1
    main                           shift and go to state 2
    PC                             shift and go to state 3

state 1

    (0) S' -> S .



state 2

    (1) S -> main .

    $end            reduce using rule 1 (S -> main .)


state 3

    (2) main -> PC . MAIN LPAREN RPAREN PC1 vars MODULO main1 PC2

    MAIN            shift and go to state 4


state 4

    (2) main -> PC MAIN . LPAREN RPAREN PC1 vars MODULO main1 PC2

    LPAREN          shift and go to state 5


state 5

    (2) main -> PC MAIN LPAREN . RPAREN PC1 vars MODULO main1 PC2

    RPAREN          shift and go to state 6


state 6

    (2) main -> PC MAIN LPAREN RPAREN . PC1 vars MODULO main1 PC2
    (4) PC1 -> .

    INT             reduce using rule 4 (PC1 -> .)
    FL              reduce using rule 4 (PC1 -> .)
    BOOL            reduce using rule 4 (PC1 -> .)
    FUNCTION        reduce using rule 4 (PC1 -> .)
    BEGIN           reduce using rule 4 (PC1 -> .)
    ID              reduce using rule 4 (PC1 -> .)
    READ            reduce using rule 4 (PC1 -> .)
    PRINT           reduce using rule 4 (PC1 -> .)
    $end            reduce using rule 4 (PC1 -> .)

    PC1                            shift and go to state 7

state 7

    (2) main -> PC MAIN LPAREN RPAREN PC1 . vars MODULO main1 PC2
    (8) vars -> . dec1 vars0 vars
    (9) vars -> .
    (10) dec1 -> . TIPO COLON
    (11) dec1 -> .
    (12) TIPO -> . INT
    (13) TIPO -> . FL
    (14) TIPO -> . BOOL

  ! reduce/reduce conflict for FUNCTION resolved using rule 9 (vars -> .)
  ! reduce/reduce conflict for BEGIN resolved using rule 9 (vars -> .)
  ! reduce/reduce conflict for $end resolved using rule 9 (vars -> .)
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FL resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
    FUNCTION        reduce using rule 9 (vars -> .)
    BEGIN           reduce using rule 9 (vars -> .)
    $end            reduce using rule 9 (vars -> .)
    ID              reduce using rule 11 (dec1 -> .)
    READ            reduce using rule 11 (dec1 -> .)
    PRINT           reduce using rule 11 (dec1 -> .)
    INT             shift and go to state 11
    FL              shift and go to state 12
    BOOL            shift and go to state 13

  ! INT             [ reduce using rule 11 (dec1 -> .) ]
  ! FL              [ reduce using rule 11 (dec1 -> .) ]
  ! BOOL            [ reduce using rule 11 (dec1 -> .) ]
  ! FUNCTION        [ reduce using rule 11 (dec1 -> .) ]
  ! BEGIN           [ reduce using rule 11 (dec1 -> .) ]
  ! $end            [ reduce using rule 11 (dec1 -> .) ]

    vars                           shift and go to state 8
    dec1                           shift and go to state 9
    TIPO                           shift and go to state 10

state 8

    (2) main -> PC MAIN LPAREN RPAREN PC1 vars . MODULO main1 PC2
    (19) MODULO -> . FUNCTION ID MOD1 LPAREN RPAREN vars BLOQUE END MODULO MOD2
    (20) MODULO -> .

    FUNCTION        shift and go to state 15
    BEGIN           reduce using rule 20 (MODULO -> .)
    $end            reduce using rule 20 (MODULO -> .)

    MODULO                         shift and go to state 14

state 9

    (8) vars -> dec1 . vars0 vars
    (15) vars0 -> . ID EQUAL F SEMICOLON
    (16) vars0 -> . READ EQUAL ID
    (17) vars0 -> . PRINT ID
    (18) vars0 -> .

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
    ID              shift and go to state 17
    READ            shift and go to state 18
    PRINT           shift and go to state 19
    INT             reduce using rule 18 (vars0 -> .)
    FL              reduce using rule 18 (vars0 -> .)
    BOOL            reduce using rule 18 (vars0 -> .)
    FUNCTION        reduce using rule 18 (vars0 -> .)
    BEGIN           reduce using rule 18 (vars0 -> .)
    $end            reduce using rule 18 (vars0 -> .)
    SEMICOLON       reduce using rule 18 (vars0 -> .)
    END             reduce using rule 18 (vars0 -> .)
    UNTIL           reduce using rule 18 (vars0 -> .)
    PIPE            reduce using rule 18 (vars0 -> .)
    ELSE            reduce using rule 18 (vars0 -> .)
    RPAREN          reduce using rule 18 (vars0 -> .)

  ! ID              [ reduce using rule 18 (vars0 -> .) ]
  ! READ            [ reduce using rule 18 (vars0 -> .) ]
  ! PRINT           [ reduce using rule 18 (vars0 -> .) ]

    vars0                          shift and go to state 16

state 10

    (10) dec1 -> TIPO . COLON

    COLON           shift and go to state 20


state 11

    (12) TIPO -> INT .

    COLON           reduce using rule 12 (TIPO -> INT .)


state 12

    (13) TIPO -> FL .

    COLON           reduce using rule 13 (TIPO -> FL .)


state 13

    (14) TIPO -> BOOL .

    COLON           reduce using rule 14 (TIPO -> BOOL .)


state 14

    (2) main -> PC MAIN LPAREN RPAREN PC1 vars MODULO . main1 PC2
    (6) main1 -> . BLOQUE
    (7) main1 -> . BLOQUE main1
    (23) BLOQUE -> . BEGIN ESTATUTO BR END
    (24) BLOQUE -> .

  ! shift/reduce conflict for BEGIN resolved as shift
    BEGIN           shift and go to state 23
    $end            reduce using rule 24 (BLOQUE -> .)

  ! BEGIN           [ reduce using rule 24 (BLOQUE -> .) ]

    main1                          shift and go to state 21
    BLOQUE                         shift and go to state 22

state 15

    (19) MODULO -> FUNCTION . ID MOD1 LPAREN RPAREN vars BLOQUE END MODULO MOD2

    ID              shift and go to state 24


state 16

    (8) vars -> dec1 vars0 . vars
    (8) vars -> . dec1 vars0 vars
    (9) vars -> .
    (10) dec1 -> . TIPO COLON
    (11) dec1 -> .
    (12) TIPO -> . INT
    (13) TIPO -> . FL
    (14) TIPO -> . BOOL

  ! reduce/reduce conflict for FUNCTION resolved using rule 9 (vars -> .)
  ! reduce/reduce conflict for BEGIN resolved using rule 9 (vars -> .)
  ! reduce/reduce conflict for $end resolved using rule 9 (vars -> .)
  ! reduce/reduce conflict for SEMICOLON resolved using rule 9 (vars -> .)
  ! reduce/reduce conflict for END resolved using rule 9 (vars -> .)
  ! reduce/reduce conflict for UNTIL resolved using rule 9 (vars -> .)
  ! reduce/reduce conflict for PIPE resolved using rule 9 (vars -> .)
  ! reduce/reduce conflict for ELSE resolved using rule 9 (vars -> .)
  ! reduce/reduce conflict for RPAREN resolved using rule 9 (vars -> .)
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FL resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
    FUNCTION        reduce using rule 9 (vars -> .)
    BEGIN           reduce using rule 9 (vars -> .)
    $end            reduce using rule 9 (vars -> .)
    SEMICOLON       reduce using rule 9 (vars -> .)
    END             reduce using rule 9 (vars -> .)
    UNTIL           reduce using rule 9 (vars -> .)
    PIPE            reduce using rule 9 (vars -> .)
    ELSE            reduce using rule 9 (vars -> .)
    RPAREN          reduce using rule 9 (vars -> .)
    ID              reduce using rule 11 (dec1 -> .)
    READ            reduce using rule 11 (dec1 -> .)
    PRINT           reduce using rule 11 (dec1 -> .)
    INT             shift and go to state 11
    FL              shift and go to state 12
    BOOL            shift and go to state 13

  ! INT             [ reduce using rule 11 (dec1 -> .) ]
  ! FL              [ reduce using rule 11 (dec1 -> .) ]
  ! BOOL            [ reduce using rule 11 (dec1 -> .) ]
  ! FUNCTION        [ reduce using rule 11 (dec1 -> .) ]
  ! BEGIN           [ reduce using rule 11 (dec1 -> .) ]
  ! $end            [ reduce using rule 11 (dec1 -> .) ]
  ! SEMICOLON       [ reduce using rule 11 (dec1 -> .) ]
  ! END             [ reduce using rule 11 (dec1 -> .) ]
  ! UNTIL           [ reduce using rule 11 (dec1 -> .) ]
  ! PIPE            [ reduce using rule 11 (dec1 -> .) ]
  ! ELSE            [ reduce using rule 11 (dec1 -> .) ]
  ! RPAREN          [ reduce using rule 11 (dec1 -> .) ]

    dec1                           shift and go to state 9
    vars                           shift and go to state 25
    TIPO                           shift and go to state 10

state 17

    (15) vars0 -> ID . EQUAL F SEMICOLON

    EQUAL           shift and go to state 26


state 18

    (16) vars0 -> READ . EQUAL ID

    EQUAL           shift and go to state 27


state 19

    (17) vars0 -> PRINT . ID

    ID              shift and go to state 28


state 20

    (10) dec1 -> TIPO COLON .

    ID              reduce using rule 10 (dec1 -> TIPO COLON .)
    READ            reduce using rule 10 (dec1 -> TIPO COLON .)
    PRINT           reduce using rule 10 (dec1 -> TIPO COLON .)
    INT             reduce using rule 10 (dec1 -> TIPO COLON .)
    FL              reduce using rule 10 (dec1 -> TIPO COLON .)
    BOOL            reduce using rule 10 (dec1 -> TIPO COLON .)
    FUNCTION        reduce using rule 10 (dec1 -> TIPO COLON .)
    BEGIN           reduce using rule 10 (dec1 -> TIPO COLON .)
    $end            reduce using rule 10 (dec1 -> TIPO COLON .)
    SEMICOLON       reduce using rule 10 (dec1 -> TIPO COLON .)
    END             reduce using rule 10 (dec1 -> TIPO COLON .)
    UNTIL           reduce using rule 10 (dec1 -> TIPO COLON .)
    PIPE            reduce using rule 10 (dec1 -> TIPO COLON .)
    ELSE            reduce using rule 10 (dec1 -> TIPO COLON .)
    RPAREN          reduce using rule 10 (dec1 -> TIPO COLON .)


state 21

    (2) main -> PC MAIN LPAREN RPAREN PC1 vars MODULO main1 . PC2
    (5) PC2 -> .

    $end            reduce using rule 5 (PC2 -> .)

    PC2                            shift and go to state 29

state 22

    (6) main1 -> BLOQUE .
    (7) main1 -> BLOQUE . main1
    (6) main1 -> . BLOQUE
    (7) main1 -> . BLOQUE main1
    (23) BLOQUE -> . BEGIN ESTATUTO BR END
    (24) BLOQUE -> .

  ! shift/reduce conflict for BEGIN resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 6 (main1 -> BLOQUE .)
    $end            reduce using rule 6 (main1 -> BLOQUE .)
    BEGIN           shift and go to state 23

  ! BEGIN           [ reduce using rule 24 (BLOQUE -> .) ]
  ! $end            [ reduce using rule 24 (BLOQUE -> .) ]

    BLOQUE                         shift and go to state 22
    main1                          shift and go to state 30

state 23

    (23) BLOQUE -> BEGIN . ESTATUTO BR END
    (27) ESTATUTO -> . vars
    (28) ESTATUTO -> . IF L THEN THEN1 ESTATUTO IF1 FINIF
    (29) ESTATUTO -> . WHILE WHILE1 L WHILE2 ESTATUTO WHILE3 END
    (30) ESTATUTO -> . DWHILE ESTATUTO DW1 UNTIL ESTATUTO END
    (31) ESTATUTO -> . FOR LPAREN vars PIPE L PIPE vars RPAREN ESTATUTO END
    (32) ESTATUTO -> . BLOQUE
    (33) ESTATUTO -> . LCOR ID RCOR
    (34) ESTATUTO -> .
    (8) vars -> . dec1 vars0 vars
    (9) vars -> .
    (23) BLOQUE -> . BEGIN ESTATUTO BR END
    (24) BLOQUE -> .
    (10) dec1 -> . TIPO COLON
    (11) dec1 -> .
    (12) TIPO -> . INT
    (13) TIPO -> . FL
    (14) TIPO -> . BOOL

  ! reduce/reduce conflict for SEMICOLON resolved using rule 9 (vars -> .)
  ! reduce/reduce conflict for END resolved using rule 9 (vars -> .)
  ! reduce/reduce conflict for SEMICOLON resolved using rule 9 (vars -> .)
  ! reduce/reduce conflict for END resolved using rule 9 (vars -> .)
  ! reduce/reduce conflict for SEMICOLON resolved using rule 9 (vars -> .)
  ! reduce/reduce conflict for END resolved using rule 9 (vars -> .)
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FL resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
    IF              shift and go to state 33
    WHILE           shift and go to state 34
    DWHILE          shift and go to state 35
    FOR             shift and go to state 36
    LCOR            shift and go to state 38
    SEMICOLON       reduce using rule 9 (vars -> .)
    END             reduce using rule 9 (vars -> .)
    BEGIN           shift and go to state 23
    ID              reduce using rule 11 (dec1 -> .)
    READ            reduce using rule 11 (dec1 -> .)
    PRINT           reduce using rule 11 (dec1 -> .)
    INT             shift and go to state 11
    FL              shift and go to state 12
    BOOL            shift and go to state 13

  ! SEMICOLON       [ reduce using rule 34 (ESTATUTO -> .) ]
  ! END             [ reduce using rule 34 (ESTATUTO -> .) ]
  ! SEMICOLON       [ reduce using rule 24 (BLOQUE -> .) ]
  ! END             [ reduce using rule 24 (BLOQUE -> .) ]
  ! INT             [ reduce using rule 11 (dec1 -> .) ]
  ! FL              [ reduce using rule 11 (dec1 -> .) ]
  ! BOOL            [ reduce using rule 11 (dec1 -> .) ]
  ! SEMICOLON       [ reduce using rule 11 (dec1 -> .) ]
  ! END             [ reduce using rule 11 (dec1 -> .) ]

    ESTATUTO                       shift and go to state 31
    vars                           shift and go to state 32
    BLOQUE                         shift and go to state 37
    dec1                           shift and go to state 9
    TIPO                           shift and go to state 10

state 24

    (19) MODULO -> FUNCTION ID . MOD1 LPAREN RPAREN vars BLOQUE END MODULO MOD2
    (21) MOD1 -> .

    LPAREN          reduce using rule 21 (MOD1 -> .)

    MOD1                           shift and go to state 39

state 25

    (8) vars -> dec1 vars0 vars .

    FUNCTION        reduce using rule 8 (vars -> dec1 vars0 vars .)
    BEGIN           reduce using rule 8 (vars -> dec1 vars0 vars .)
    $end            reduce using rule 8 (vars -> dec1 vars0 vars .)
    SEMICOLON       reduce using rule 8 (vars -> dec1 vars0 vars .)
    END             reduce using rule 8 (vars -> dec1 vars0 vars .)
    UNTIL           reduce using rule 8 (vars -> dec1 vars0 vars .)
    PIPE            reduce using rule 8 (vars -> dec1 vars0 vars .)
    ELSE            reduce using rule 8 (vars -> dec1 vars0 vars .)
    RPAREN          reduce using rule 8 (vars -> dec1 vars0 vars .)


state 26

    (15) vars0 -> ID EQUAL . F SEMICOLON
    (48) F -> . IDCTE
    (49) F -> . LPAREN E RPAREN
    (45) IDCTE -> . ID
    (46) IDCTE -> . CTE_INT
    (47) IDCTE -> . CTE_FL

    LPAREN          shift and go to state 43
    ID              shift and go to state 40
    CTE_INT         shift and go to state 44
    CTE_FL          shift and go to state 45

    F                              shift and go to state 41
    IDCTE                          shift and go to state 42

state 27

    (16) vars0 -> READ EQUAL . ID

    ID              shift and go to state 46


state 28

    (17) vars0 -> PRINT ID .

    INT             reduce using rule 17 (vars0 -> PRINT ID .)
    FL              reduce using rule 17 (vars0 -> PRINT ID .)
    BOOL            reduce using rule 17 (vars0 -> PRINT ID .)
    ID              reduce using rule 17 (vars0 -> PRINT ID .)
    READ            reduce using rule 17 (vars0 -> PRINT ID .)
    PRINT           reduce using rule 17 (vars0 -> PRINT ID .)
    FUNCTION        reduce using rule 17 (vars0 -> PRINT ID .)
    BEGIN           reduce using rule 17 (vars0 -> PRINT ID .)
    $end            reduce using rule 17 (vars0 -> PRINT ID .)
    SEMICOLON       reduce using rule 17 (vars0 -> PRINT ID .)
    END             reduce using rule 17 (vars0 -> PRINT ID .)
    UNTIL           reduce using rule 17 (vars0 -> PRINT ID .)
    PIPE            reduce using rule 17 (vars0 -> PRINT ID .)
    ELSE            reduce using rule 17 (vars0 -> PRINT ID .)
    RPAREN          reduce using rule 17 (vars0 -> PRINT ID .)


state 29

    (2) main -> PC MAIN LPAREN RPAREN PC1 vars MODULO main1 PC2 .

    $end            reduce using rule 2 (main -> PC MAIN LPAREN RPAREN PC1 vars MODULO main1 PC2 .)


state 30

    (7) main1 -> BLOQUE main1 .

    $end            reduce using rule 7 (main1 -> BLOQUE main1 .)


state 31

    (23) BLOQUE -> BEGIN ESTATUTO . BR END
    (25) BR -> . SEMICOLON ESTATUTO BR
    (26) BR -> .

    SEMICOLON       shift and go to state 48
    END             reduce using rule 26 (BR -> .)

    BR                             shift and go to state 47

state 32

    (27) ESTATUTO -> vars .

    SEMICOLON       reduce using rule 27 (ESTATUTO -> vars .)
    END             reduce using rule 27 (ESTATUTO -> vars .)
    UNTIL           reduce using rule 27 (ESTATUTO -> vars .)
    ELSE            reduce using rule 27 (ESTATUTO -> vars .)


state 33

    (28) ESTATUTO -> IF . L THEN THEN1 ESTATUTO IF1 FINIF
    (59) L -> . ID OPRL ID
    (60) L -> . LPAREN D RPAREN

    ID              shift and go to state 50
    LPAREN          shift and go to state 51

    L                              shift and go to state 49

state 34

    (29) ESTATUTO -> WHILE . WHILE1 L WHILE2 ESTATUTO WHILE3 END
    (40) WHILE1 -> .

    ID              reduce using rule 40 (WHILE1 -> .)
    LPAREN          reduce using rule 40 (WHILE1 -> .)

    WHILE1                         shift and go to state 52

state 35

    (30) ESTATUTO -> DWHILE . ESTATUTO DW1 UNTIL ESTATUTO END
    (27) ESTATUTO -> . vars
    (28) ESTATUTO -> . IF L THEN THEN1 ESTATUTO IF1 FINIF
    (29) ESTATUTO -> . WHILE WHILE1 L WHILE2 ESTATUTO WHILE3 END
    (30) ESTATUTO -> . DWHILE ESTATUTO DW1 UNTIL ESTATUTO END
    (31) ESTATUTO -> . FOR LPAREN vars PIPE L PIPE vars RPAREN ESTATUTO END
    (32) ESTATUTO -> . BLOQUE
    (33) ESTATUTO -> . LCOR ID RCOR
    (34) ESTATUTO -> .
    (8) vars -> . dec1 vars0 vars
    (9) vars -> .
    (23) BLOQUE -> . BEGIN ESTATUTO BR END
    (24) BLOQUE -> .
    (10) dec1 -> . TIPO COLON
    (11) dec1 -> .
    (12) TIPO -> . INT
    (13) TIPO -> . FL
    (14) TIPO -> . BOOL

  ! reduce/reduce conflict for SEMICOLON resolved using rule 9 (vars -> .)
  ! reduce/reduce conflict for UNTIL resolved using rule 9 (vars -> .)
  ! reduce/reduce conflict for SEMICOLON resolved using rule 9 (vars -> .)
  ! reduce/reduce conflict for UNTIL resolved using rule 9 (vars -> .)
  ! reduce/reduce conflict for SEMICOLON resolved using rule 9 (vars -> .)
  ! reduce/reduce conflict for UNTIL resolved using rule 9 (vars -> .)
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FL resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
    IF              shift and go to state 33
    WHILE           shift and go to state 34
    DWHILE          shift and go to state 35
    FOR             shift and go to state 36
    LCOR            shift and go to state 38
    SEMICOLON       reduce using rule 9 (vars -> .)
    UNTIL           reduce using rule 9 (vars -> .)
    BEGIN           shift and go to state 23
    ID              reduce using rule 11 (dec1 -> .)
    READ            reduce using rule 11 (dec1 -> .)
    PRINT           reduce using rule 11 (dec1 -> .)
    INT             shift and go to state 11
    FL              shift and go to state 12
    BOOL            shift and go to state 13

  ! SEMICOLON       [ reduce using rule 34 (ESTATUTO -> .) ]
  ! UNTIL           [ reduce using rule 34 (ESTATUTO -> .) ]
  ! SEMICOLON       [ reduce using rule 24 (BLOQUE -> .) ]
  ! UNTIL           [ reduce using rule 24 (BLOQUE -> .) ]
  ! INT             [ reduce using rule 11 (dec1 -> .) ]
  ! FL              [ reduce using rule 11 (dec1 -> .) ]
  ! BOOL            [ reduce using rule 11 (dec1 -> .) ]
  ! SEMICOLON       [ reduce using rule 11 (dec1 -> .) ]
  ! UNTIL           [ reduce using rule 11 (dec1 -> .) ]

    ESTATUTO                       shift and go to state 53
    vars                           shift and go to state 32
    BLOQUE                         shift and go to state 37
    dec1                           shift and go to state 9
    TIPO                           shift and go to state 10

state 36

    (31) ESTATUTO -> FOR . LPAREN vars PIPE L PIPE vars RPAREN ESTATUTO END

    LPAREN          shift and go to state 54


state 37

    (32) ESTATUTO -> BLOQUE .

    SEMICOLON       reduce using rule 32 (ESTATUTO -> BLOQUE .)
    END             reduce using rule 32 (ESTATUTO -> BLOQUE .)
    UNTIL           reduce using rule 32 (ESTATUTO -> BLOQUE .)
    ELSE            reduce using rule 32 (ESTATUTO -> BLOQUE .)


state 38

    (33) ESTATUTO -> LCOR . ID RCOR

    ID              shift and go to state 55


state 39

    (19) MODULO -> FUNCTION ID MOD1 . LPAREN RPAREN vars BLOQUE END MODULO MOD2

    LPAREN          shift and go to state 56


state 40

    (45) IDCTE -> ID .

    SEMICOLON       reduce using rule 45 (IDCTE -> ID .)
    TIMES           reduce using rule 45 (IDCTE -> ID .)
    DIVIDE          reduce using rule 45 (IDCTE -> ID .)
    RPAREN          reduce using rule 45 (IDCTE -> ID .)
    PLUS            reduce using rule 45 (IDCTE -> ID .)
    MINUS           reduce using rule 45 (IDCTE -> ID .)


state 41

    (15) vars0 -> ID EQUAL F . SEMICOLON

    SEMICOLON       shift and go to state 57


state 42

    (48) F -> IDCTE .

    SEMICOLON       reduce using rule 48 (F -> IDCTE .)
    TIMES           reduce using rule 48 (F -> IDCTE .)
    DIVIDE          reduce using rule 48 (F -> IDCTE .)
    RPAREN          reduce using rule 48 (F -> IDCTE .)
    PLUS            reduce using rule 48 (F -> IDCTE .)
    MINUS           reduce using rule 48 (F -> IDCTE .)


state 43

    (49) F -> LPAREN . E RPAREN
    (50) E -> . T
    (51) E -> . E PLUS T
    (52) E -> . E MINUS T
    (53) T -> . F
    (54) T -> . T TIMES F
    (55) T -> . T DIVIDE F
    (48) F -> . IDCTE
    (49) F -> . LPAREN E RPAREN
    (45) IDCTE -> . ID
    (46) IDCTE -> . CTE_INT
    (47) IDCTE -> . CTE_FL

    LPAREN          shift and go to state 43
    ID              shift and go to state 40
    CTE_INT         shift and go to state 44
    CTE_FL          shift and go to state 45

    E                              shift and go to state 58
    T                              shift and go to state 59
    F                              shift and go to state 60
    IDCTE                          shift and go to state 42

state 44

    (46) IDCTE -> CTE_INT .

    SEMICOLON       reduce using rule 46 (IDCTE -> CTE_INT .)
    TIMES           reduce using rule 46 (IDCTE -> CTE_INT .)
    DIVIDE          reduce using rule 46 (IDCTE -> CTE_INT .)
    RPAREN          reduce using rule 46 (IDCTE -> CTE_INT .)
    PLUS            reduce using rule 46 (IDCTE -> CTE_INT .)
    MINUS           reduce using rule 46 (IDCTE -> CTE_INT .)


state 45

    (47) IDCTE -> CTE_FL .

    SEMICOLON       reduce using rule 47 (IDCTE -> CTE_FL .)
    TIMES           reduce using rule 47 (IDCTE -> CTE_FL .)
    DIVIDE          reduce using rule 47 (IDCTE -> CTE_FL .)
    RPAREN          reduce using rule 47 (IDCTE -> CTE_FL .)
    PLUS            reduce using rule 47 (IDCTE -> CTE_FL .)
    MINUS           reduce using rule 47 (IDCTE -> CTE_FL .)


state 46

    (16) vars0 -> READ EQUAL ID .

    INT             reduce using rule 16 (vars0 -> READ EQUAL ID .)
    FL              reduce using rule 16 (vars0 -> READ EQUAL ID .)
    BOOL            reduce using rule 16 (vars0 -> READ EQUAL ID .)
    ID              reduce using rule 16 (vars0 -> READ EQUAL ID .)
    READ            reduce using rule 16 (vars0 -> READ EQUAL ID .)
    PRINT           reduce using rule 16 (vars0 -> READ EQUAL ID .)
    FUNCTION        reduce using rule 16 (vars0 -> READ EQUAL ID .)
    BEGIN           reduce using rule 16 (vars0 -> READ EQUAL ID .)
    $end            reduce using rule 16 (vars0 -> READ EQUAL ID .)
    SEMICOLON       reduce using rule 16 (vars0 -> READ EQUAL ID .)
    END             reduce using rule 16 (vars0 -> READ EQUAL ID .)
    UNTIL           reduce using rule 16 (vars0 -> READ EQUAL ID .)
    PIPE            reduce using rule 16 (vars0 -> READ EQUAL ID .)
    ELSE            reduce using rule 16 (vars0 -> READ EQUAL ID .)
    RPAREN          reduce using rule 16 (vars0 -> READ EQUAL ID .)


state 47

    (23) BLOQUE -> BEGIN ESTATUTO BR . END

    END             shift and go to state 61


state 48

    (25) BR -> SEMICOLON . ESTATUTO BR
    (27) ESTATUTO -> . vars
    (28) ESTATUTO -> . IF L THEN THEN1 ESTATUTO IF1 FINIF
    (29) ESTATUTO -> . WHILE WHILE1 L WHILE2 ESTATUTO WHILE3 END
    (30) ESTATUTO -> . DWHILE ESTATUTO DW1 UNTIL ESTATUTO END
    (31) ESTATUTO -> . FOR LPAREN vars PIPE L PIPE vars RPAREN ESTATUTO END
    (32) ESTATUTO -> . BLOQUE
    (33) ESTATUTO -> . LCOR ID RCOR
    (34) ESTATUTO -> .
    (8) vars -> . dec1 vars0 vars
    (9) vars -> .
    (23) BLOQUE -> . BEGIN ESTATUTO BR END
    (24) BLOQUE -> .
    (10) dec1 -> . TIPO COLON
    (11) dec1 -> .
    (12) TIPO -> . INT
    (13) TIPO -> . FL
    (14) TIPO -> . BOOL
